--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
+    "lucide-react": "^0.487.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0"
   },
