--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dom-router": "^5.1.3",
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
