--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "homepage": "https://maxamax2.github.io/Anticoste/",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "dom-router": "^5.1.3",
